--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "convex": "^1.17.0",
     "lucide-react": "^0.453.0",
     "next": "15.0.1",
+    "pnpm": "^9.12.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "svix": "^1.37.0",
